--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react-swc": "^3.7.0",
+    "vite-tsconfig-paths": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.30.4",
     "esbuild": "^0.25.0",
