--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "hono": "^4.5.3",
+    "@clerk/hono": "^0.3.4",
+    "@hono/zod-validator": "^0.2.2"
     "@clerk/clerk-react": "^5.53.4",
     "@clerk/clerk-sdk-node": "^4.13.23",
     "@hookform/resolvers": "^3.9.1",
