--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "hono": "^4.5.3",
     "@clerk/hono": "^0.3.4",
-    "@hono/zod-validator": "^0.2.2"
+    "@hono/zod-validator": "^0.2.2",
     "@clerk/clerk-react": "^5.53.4",
     "@clerk/clerk-sdk-node": "^4.13.23",
     "@hookform/resolvers": "^3.9.1",
