--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
-    "hono": "^4.5.3",
-    "@clerk/hono": "^0.3.4",
-    "@hono/zod-validator": "^0.2.2",
     "@clerk/clerk-react": "^5.53.4",
     "@clerk/clerk-sdk-node": "^4.13.23",
     "@hookform/resolvers": "^3.9.1",
@@ -82,7 +79,11 @@
     "vaul": "^1.1.0",
     "ws": "^8.18.0",
     "zod": "^3.23.8",
-    "zod-validation-error": "^3.4.0"
+    "zod-validation-error": "^3.4.0",
+    "hono": "^4.5.3",
+    "hono": "^4.5.3",
+    "@hono/clerk-auth": "^0.5.0",
+    "@hono/zod-validator": "^0.2.2"
   },
   "devDependencies": {
     "@replit/vite-plugin-cartographer": "^0.0.11",
