--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "zod": "^3.23.8",
     "zod-validation-error": "^3.4.0",
     "hono": "^4.5.3",
-    "@hono/clerk-auth": "^1.1.2",
+    "@hono/clerk-auth": "latest",
     "@hono/zod-validator": "^0.2.2"
   },
   "devDependencies": {
