--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
+    "postgres": "^3.4.4",
     "@clerk/clerk-react": "^5.53.4",
     "@clerk/clerk-sdk-node": "^4.13.23",
     "@hookform/resolvers": "^3.9.1",
