--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "hono": "^4.5.3",
     "@hono/clerk-auth": "latest",
     "@hono/zod-validator": "^0.2.2",
-    "@hono/express-adapter": "latest"
+    "@hono/node-server": "latest"
   },
   "devDependencies": {
     "@replit/vite-plugin-cartographer": "^0.0.11",
