--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-postgresql://neondb_owner:npg_uN2CLYGkT1Rz@ep-super-king-a2i3zzo8-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+"postgresql://neondb_owner:npg_uN2CLYGkT1Rz@ep-super-king-a2i3zzo8-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
